2011-08-25  Pavel Podivilov  <podivilov@chromium.org>

        Web Inspector: extract FormattedContentProvider from RawSourceCode.
        https://bugs.webkit.org/show_bug.cgi?id=66938

        Reviewed by Pavel Feldman.

        * inspector/front-end/SourceFile.js:
        (WebInspector.RawSourceCode.prototype._setContentProvider):
        (WebInspector.RawSourceCode.prototype._loadResourceContent):
        (WebInspector.RawSourceCode.prototype._loadScriptContent):
        (WebInspector.RawSourceCode.prototype._loadAndConcatenateScriptsContent):
        (WebInspector.RawSourceCode.prototype._didRequestContent):
        (WebInspector.FormattedContentProvider):
        (WebInspector.FormattedContentProvider.prototype.requestContent.didRequestContent.didFormatContent):
        (WebInspector.FormattedContentProvider.prototype.requestContent):

2011-08-25  Pavel Podivilov  <podivilov@chromium.org>

        Web Inspector: link UISourceCode to RawSourceCode.
        https://bugs.webkit.org/show_bug.cgi?id=66944

        Reviewed by Pavel Feldman.

        * inspector/front-end/UISourceCode.js:
        (WebInspector.UISourceCode):
        (WebInspector.UISourceCode.prototype.get rawSourceCode):

2011-08-25  Pavel Podivilov  <podivilov@chromium.org>

        Web Inspector: remove RawSourceCode.setFormatted.
        https://bugs.webkit.org/show_bug.cgi?id=66947

        Reviewed by Pavel Feldman.

        * inspector/front-end/DebuggerPresentationModel.js:
        * inspector/front-end/SourceFile.js:
        (WebInspector.RawSourceCode):

2011-08-26  Pavel Podivilov  <podivilov@chromium.org>

        Web Inspector: Debugger.setBreakpointByUrl should return error when setting breakpoint on the same location twice.
        https://bugs.webkit.org/show_bug.cgi?id=67030

        Reviewed by Pavel Feldman.

        Test: inspector/debugger/set-breakpoint.html

        * inspector/InspectorDebuggerAgent.cpp:
        (WebCore::InspectorDebuggerAgent::setBreakpointByUrl):
